--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
 body {
     display: flex;
     flex-direction: row;
+    
+    justify-content: center;
+
     height: 100vh;
     background-color: violet;
 }
@@ -16,12 +19,14 @@ body {
 
     margin: 20px 80px;
     width: 100%;
+    max-width: 1600px;
+    min-height: 500px;
 }
 
 #container {
     display: flex;
     
-    width: 30%;
+    width: 25%;
 
     justify-content: center;
     
@@ -33,6 +38,7 @@ body {
     flex-direction: column;
     
     width: 80%;
+    max-width: 400px;
     height: 100%;
 
     align-items: center;
@@ -69,6 +75,54 @@ h1 {
     padding-left: 5px;
 }
 
+#lembrar {
+    display: flex;
+    flex-direction: row;
+
+    margin-top: 3%;
+
+    width: 100%;
+
+    align-items: center;
+}
+
+#lembrar input {
+    width: 12px;
+    height: 12px;
+}
+
+#lembrar p {
+    width: 100px;
+
+    font-size: 10px;
+    font-weight: bold;
+
+    margin-left: 5px;
+}
+
+#login > button {
+    display: flex;
+    position: relative;
+
+    top: 10%;
+
+    align-items: center;
+    justify-content: center;
+
+    width: 3rem;
+    height: 3rem;
+
+    border: none;
+    border-radius: 30%;
+    
+    background-color: #EDEDED;
+}
+
+#login > button img{
+    filter: grayscale(100%);
+    width: 30px;
+}
+
 #buttonsLogin {
     display: flex;
     width: 100%;
@@ -82,9 +136,13 @@ h1 {
     justify-content: center;
 
     width: 23%;
-    border: 2px solid red;
+    border: 2px solid;
     border-radius: 3px;
     padding: 0 1.2em;
+}
+
+#buttonsLogin button:hover {
+    cursor: pointer;
 }
 
 #buttonsLogin button img {
@@ -112,8 +170,19 @@ h1 {
     background-color: #107C10;
 }
 
+#login a {
+    position: relative;
+    top: 20%;
+    
+    font-size: 8px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #9c9c9c;
+
+}
+
 #asideImage {
-    width: 70%;
+    width: 75%;
     
     background-image: url(imgs/Login\ Screen.jpg);
     background-size: cover;
